# simdisk

./: .clang-format  CMakeLists.txt
include/: inode.h  ipc.h  path.h  users.h
src/: init.cpp  main.cpp  shell.cpp  test.cpp
